# AI_MODELS

./: KarnaGpt.py  OllammawithSteamlit.py  PyBot_Deepseek.py  ollama_chat_with_termial.py  ollamma_chat_with_Web.py  ollmma_chat_with_Tnk.py  streamlit_basics.py
.devcontainer/: devcontainer.json
Calender_Agent/: .gitignore  Calender_MCP.json  app.py  calender.py  client.py  main.py  mathserver.py  pyproject.toml  requirements.txt  test.py  weather.py
Practice Chatbots/: Deepseek_Chatbot.py  index.html  test.py
Python Basics/Python Practice/: Module2.py  Numpy.py  PyBot.py  PythonDay3.py  functions.py
Python_Basics/NewStart/: ConditionalStatements.py  Functions.py  Operators.py  Variables.py
Python_Basics/Python Practice/: Arrays.py  Classes and Objects.py  Febonacci.py  Module1.py  PythonDay1.py  PythonDay2.py  PythonDay4.py  PythonDay5.py  PythonDay6.py
